# Sensitivity_Analysis

./: .gitignore  README.md  pyproject.toml
seep/: README_SEEP.md  aco.py  rmse.py  test_installation.py  verification.py
seep/docs/: geostudio_python_consumo_metodos.md  geostudio_python_passo_a_passo.md  seep_geostudio_api_doc.md
seep/installation/: requirements.txt  verification.py
seep/optimization/: aco.py  aco_multi.py  config.py  main.py  main_multi_material.py  objective_function.py  seep_explorer.py  seep_model.py
src/sensitivity_analysis/interface/: soil.py  soil_result.py
src/sensitivity_analysis/utils/: calculadora.py
src/sensitivity_analysis/web/: app.py
trabalho/: pyvenv.cfg
trabalho/Scripts/: activate  activate.bat
